Undid previous edit to give correct scaling on mobile.

--- a/style/index_mobile.css
+++ b/style/index_mobile.css
@@ -1,7 +1,6 @@
 
 #main {
-	width:initial;
-	max-width:700px;
+	width:100%;
 }
 
 #column1 {
